--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <!-- Your code here -->
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="image">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"alt="image" title="image">
 
 </body>
 </html>
